# quant

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  backtest.py  backtest2.py  backtest_new.py  backtset.py  binanace_producer.py  bt3.py  docker-compose.yml  get_data.py  kafka_consumer.py  kafka_producer.py  mock_trading.py  new_strategy.py  plot_log.py  possible_backtest_interface.py  pyproject.toml  requirements.txt  test_strategy.py  utils.py  write_binance_data.py  write_data.py
docker/: Dockerfile  docker-compose.yml
src/: Telegram_bot.py  __init__.py  backtset.py  binance_api.py  client.py  create_backtest_database.py  database_operator.py  process.py  test_arcticdb.py  test_perf.py  ticker.py  ubwa.py  utils.py  wallet.py  websocket.py  websocket2.py  write_binance_data.py
src/backtset/: market.py  wallet.py
src/client/: binance_api.py
src/data_process/: __init__.py  data_structure.py  product_state.py  write_binance_data.py  write_data.py
src/data_source/: binanace_producer.py  create_backtest_database.py  test_arcticdb.py
src/eval/: evaluator.py
src/event/: telegram_bot.py
src/fin_index/: index.py  mock_data.py  test_index.py  test_index2.py
src/strategies/: base_strategy.py  peak.py  (+11 more)
strategies/: mean_average.py  mean_average_strategy.py
tests/: mocks.py  test_asset.py  test_coin.py  test_create_backtest_db.py  test_data_structure.py  test_database_operator.py  test_evaluator.py  test_index.py  test_market.py  test_naive_strategy.py  test_state_machine.py  test_state_mahcine.py  test_telegram_bot.py  test_ticker.py  test_wallet.py
(+15 files in other folders)
