[project]
name = "quant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arcticdb>=5.4.1",
    "ipython>=9.2.0",
    "kafka-python>=2.2.7",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pprintpp>=0.4.0",
    "pytest>=8.3.5",
    "python-statemachine>=2.5.0",
    "python-telegram-bot>=22.0",
    "requests>=2.32.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "telegram>=0.0.1",
    "tqdm>=4.67.1",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
